# github_templates_test

./: CMakeLists.txt  License.md  README.md  Release_Notes.md  cmake.txt  release.md
.github/: labeler.yml  semantic.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc_report.yml  feature_request.yml
src/pre_net/: pre_client.h  pre_consumer.cpp  pre_producer.cpp  pre_server.cpp  pre_server.h  pre_utils.h
src/pre_net_demo/: pre_client.h  pre_consumer.cpp  pre_consumer_old.cpp  pre_producer.cpp  pre_server.cpp  pre_server.h  pre_utils.h
src/pre_server/: #pre-server.cpp#  .#pre-server.cpp  CMakeLists.txt  pre-server.cpp  pre-socket-utils.h
src/real_server/: CMakeLists.txt  real-client.cpp  real-server.cpp  real_client.cpp  real_server.cpp  utils.h
src/real_socket_server/: CMakeLists.txt  pre-client.cpp  real-socket-client.cpp  real-socket-server.cpp  real_socket_client.cpp  real_socket_server.cpp  utils-socket.h
src/thresh_net_1/: thresh_client.h  thresh_client_a.cpp  thresh_client_b.cpp  thresh_server.h  thresh_utils.h
src/thresh_net_2/: thresh_client.h  thresh_client_a.cpp  thresh_client_b.cpp  thresh_server.cpp  thresh_server.h  thresh_utils.h
